--- a/episodes/season_30.yml
+++ b/episodes/season_30.yml
@@ -4,7 +4,7 @@ episodes:
   season: 30
   episode: 1
   description: Bart's cover for his lie backfires.
-  disneyplus_id:
+  disneyplus_id: 3abea375-9c5d-4b5d-8e7f-16818897c8a5
   simpsonsworld_id:
   good: maybe
   characters:
@@ -12,7 +12,7 @@ episodes:
   season: 30
   episode: 2
   description: Homer and Marge go on an amazing race type show where they are eliminated immediately.
-  disneyplus_id:
+  disneyplus_id: 7c3f3732-8a93-4a58-ab07-f658a8b5ff65
   simpsonsworld_id:
   good: maybe
   characters:
@@ -20,7 +20,7 @@ episodes:
   season: 30
   episode: 3
   description: The Simpsons explore three ways to get into heaven.
-  disneyplus_id:
+  disneyplus_id: b1053f70-abf6-4fb3-a55b-6413e7cd45f8
   simpsonsworld_id:
   good: maybe
   characters:
@@ -28,7 +28,7 @@ episodes:
   season: 30
   episode: 4
   description: The Simpsons battle spores from space and Grampa goes to a Jurassic Park-style senior home.
-  disneyplus_id:
+  disneyplus_id: 0b0b2d05-b113-4d25-b232-849b47bfe6cd
   simpsonsworld_id:
   good: maybe
   characters:
@@ -36,7 +36,7 @@ episodes:
   season: 30
   episode: 5
   description: Marge and Homer work together at a cool tech company.
-  disneyplus_id:
+  disneyplus_id: 00a1d721-7669-4ee2-8da5-799f84ae2d90
   simpsonsworld_id:
   good: maybe
   characters:
@@ -44,7 +44,7 @@ episodes:
   season: 30
   episode: 6
   description: Bart orders a Russian bride for Moe. She turns Moe's life around, and he falls in love.
-  disneyplus_id:
+  disneyplus_id: c96aa7e3-f5d8-4b8e-aee2-a7c23cee6c55
   simpsonsworld_id:
   good: maybe
   characters:
@@ -52,7 +52,7 @@ episodes:
   season: 30
   episode: 7
   description: Marge becomes a successful Tupperware saleswoman because customers think she's a man in drag.
-  disneyplus_id:
+  disneyplus_id: 84953856-8319-4600-8072-799c2e1e32c4
   simpsonsworld_id:
   good: maybe
   characters:
@@ -60,7 +60,7 @@ episodes:
   season: 30
   episode: 8
   description: Homer becomes an internet recapper while Krusty joins the circus.
-  disneyplus_id:
+  disneyplus_id: b5aeb3d3-3cc3-4e91-a32a-1b33b683b4f9
   simpsonsworld_id:
   good: maybe
   characters:
@@ -68,7 +68,7 @@ episodes:
   season: 30
   episode: 9
   description: Lisa reads "To Kill a Mockingbird" and observes similarities between her dad and Atticus Finch.
-  disneyplus_id:
+  disneyplus_id: 057a8476-019d-4196-8601-38ba7aa0fcad
   simpsonsworld_id:
   good: maybe
   characters:
@@ -76,7 +76,7 @@ episodes:
   season: 30
   episode: 10
   description: The Simpsons try to spend a relaxing Florida Christmas.
-  disneyplus_id:
+  disneyplus_id: 6676b4c4-75d0-4d1f-8384-e5da1fb4ec2c
   simpsonsworld_id:
   good: maybe
   characters:
@@ -84,7 +84,7 @@ episodes:
   season: 30
   episode: 11
   description: Grampa learns a startling secret from his past. It takes him to Texas to find a long-lost life.
-  disneyplus_id:
+  disneyplus_id: 9595ca10-574c-4a98-9d06-d3a3d9cfa9ff
   simpsonsworld_id:
   good: maybe
   characters:
@@ -92,7 +92,7 @@ episodes:
   season: 30
   episode: 12
   description: Lisa discovers the ideal family... and lies about her own.
-  disneyplus_id:
+  disneyplus_id: 381dd896-c62b-418d-8139-9901022e8c7b
   simpsonsworld_id:
   good: maybe
   characters:
@@ -100,7 +100,7 @@ episodes:
   season: 30
   episode: 13
   description: When Homer breaks a promise and binge watches a show without Marge, she is more furious than ever.
-  disneyplus_id:
+  disneyplus_id: 5e947ef5-874d-4e6d-8d7b-9c0f6418c95f
   simpsonsworld_id:
   good: maybe
   characters:
@@ -108,7 +108,7 @@ episodes:
   season: 30
   episode: 14
   description: On a podcast Krusty discusses a lost film he made in the ‘80s.
-  disneyplus_id:
+  disneyplus_id: d3a79e2f-0900-427d-8a99-aed99216af5c
   simpsonsworld_id:
   good: maybe
   characters:
@@ -116,7 +116,7 @@ episodes:
   season: 30
   episode: 15
   description: Homer goes on a joyride and is threatened with prison by Comic Book Guy.
-  disneyplus_id:
+  disneyplus_id: cc74c61c-b33f-487b-b9bf-c78e794aadef
   simpsonsworld_id:
   good: maybe
   characters:
@@ -124,7 +124,7 @@ episodes:
   season: 30
   episode: 16
   description: Homer gets an inguinal hernia which comes to life and tells him to take it easy.
-  disneyplus_id:
+  disneyplus_id: 7cfaf421-8641-4f8a-bf33-b5aa8ce65e8b
   simpsonsworld_id:
   good: maybe
   characters:
@@ -132,7 +132,7 @@ episodes:
   season: 30
   episode: 17
   description: Bart earns money in a video game competition, and Homer becomes his coach.
-  disneyplus_id:
+  disneyplus_id: 54f1162d-019a-4731-a951-9f0db6abb64d
   simpsonsworld_id:
   good: maybe
   characters:
@@ -140,7 +140,7 @@ episodes:
   season: 30
   episode: 18
   description: Bart is upset to learn there is a new, all-girl version of Itchy and Scratchy.
-  disneyplus_id:
+  disneyplus_id: 8b656b44-85db-4ecd-bae5-a3258eb8e9f6
   simpsonsworld_id:
   good: maybe
   characters:
@@ -148,7 +148,7 @@ episodes:
   season: 30
   episode: 19
   description: Lisa joins an advanced youth orchestra in Capital City, throwing the family’s lives into havoc.
-  disneyplus_id:
+  disneyplus_id: df2fda5d-4585-424a-a2d5-35a4a5178067
   simpsonsworld_id:
   good: maybe
   characters:
@@ -156,7 +156,7 @@ episodes:
   season: 30
   episode: 20
   description: Marge becomes director of a local theater production.
-  disneyplus_id:
+  disneyplus_id: 1178d9bf-9372-4847-aee2-66e2b7aa84ad
   simpsonsworld_id:
   good: maybe
   characters:
@@ -164,7 +164,7 @@ episodes:
   season: 30
   episode: 21
   description: Lisa goes to Canada and refuses to leave. A desperate Marge tries to get her back.
-  disneyplus_id:
+  disneyplus_id: 1dd944b3-cda9-4ae7-8bb9-7391e793104e
   simpsonsworld_id:
   good: maybe
   characters:
@@ -172,7 +172,7 @@ episodes:
   season: 30
   episode: 22
   description: $600 theft rocks the Simpson home. A local TV crime show attempts to crack it to no avail.
-  disneyplus_id:
+  disneyplus_id: 106f5152-8b8a-497c-a823-b10e809f717e
   simpsonsworld_id:
   good: maybe
   characters:
@@ -180,7 +180,7 @@ episodes:
   season: 30
   episode: 23
   description: Marge sells crystals and makes a fortune.
-  disneyplus_id:
+  disneyplus_id: 553af900-6995-420a-8230-61ae64ca9c9a
   simpsonsworld_id:
   good: maybe
   characters:
