--- a/episodes/season_17.yml
+++ b/episodes/season_17.yml
@@ -109,8 +109,10 @@ episodes:
     believe that Grampa isn't his biological father after all.
   disneyplus_id: 5076a95f-afa6-46d1-8e57-91577a8220cf
   simpsonsworld_id: 279775811924
-  good: maybe
+  good: false
   characters:
+    - homer
+    - grandpa
 - title: We're on the Road to D'ohwhere
   season: 17
   episode: 11
@@ -119,8 +121,10 @@ episodes:
     after she sells Homer's pain medications during a yard sale.
   disneyplus_id: 97ef599a-591e-4b7b-8d45-4dee2571550e
   simpsonsworld_id: 310483523720
-  good: maybe
+  good: false
   characters:
+    - homer
+    - bart
 - title: My Fair Laddy
   season: 17
   episode: 12
@@ -129,8 +133,11 @@ episodes:
     after he rips his favorite blue pants.
   disneyplus_id: 11f3cddd-9bb1-4486-a382-448da80dc063
   simpsonsworld_id: 307171907536
-  good: maybe
+  good: false
   characters:
+    - willie
+    - lisa
+    - homer
 - title: The Seemingly Never-Ending Story
   season: 17
   episode: 13
@@ -139,8 +146,9 @@ episodes:
     and Homer.
   disneyplus_id: 34ca3fd2-198b-4dbc-a3f0-20813f98d804
   simpsonsworld_id: 277107267767
-  good: maybe
+  good: false
   characters:
+    - vignettes
 - title: Bart Has Two Mommies
   season: 17
   episode: 14
@@ -148,8 +156,12 @@ episodes:
     grabs hold of Bart.
   disneyplus_id: f0ba9823-f753-4fde-b3c3-597e098037c1
   simpsonsworld_id: 277113411511
-  good: maybe
+  good: true
   characters:
+    - rod
+    - todd
+    - marge
+    - bart
 - title: Homer Simpson, This is Your Wife
   season: 17
   episode: 15
@@ -157,8 +169,10 @@ episodes:
     on a reality television show.
   disneyplus_id: c76182bf-8018-4817-bebe-6f6e97fd95c1
   simpsonsworld_id: 277119043544
-  good: maybe
+  good: false
   characters:
+    - homer
+    - marge
 - title: Million Dollar Abie
   season: 17
   episode: 16
@@ -176,8 +190,12 @@ episodes:
     Richard Dean Anderson.
   disneyplus_id: ea476b6b-104d-4b87-b600-104ce3ea2192
   simpsonsworld_id: 283757123904
-  good: maybe
+  good: false
   characters:
+    - homer
+    - mr_burns
+    - patty
+    - selma
 - title: The Wettest Stories Ever Told
   season: 17
   episode: 18
@@ -185,8 +203,9 @@ episodes:
     Mayflower, the mutiny on The Bounty, and the capsizing of a cruise ship.'
   disneyplus_id: 45d552e0-f659-47d7-a211-af7feff50ed0
   simpsonsworld_id: 310489667660
-  good: maybe
+  good: false
   characters:
+    - vignettes
 - title: Girls Just Want to Have Sums
   season: 17
   episode: 19
@@ -195,8 +214,9 @@ episodes:
     Lisa to dress up like a boy so she can attend a math class.
   disneyplus_id: 5df6d32f-2304-45cd-a197-1d90aa7e1d76
   simpsonsworld_id: 274367043639
-  good: maybe
+  good: false
   characters:
+    - lisa
 - title: Regarding Margie
   season: 17
   episode: 20
