--- a/episodes/season_17.yml
+++ b/episodes/season_17.yml
@@ -180,8 +180,9 @@ episodes:
     to end his life, but the experience changes him, and he ends up becoming a matador.
   disneyplus_id: f06f1cc0-dad5-43ca-95f6-bd312cf3447c
   simpsonsworld_id: 292950083730
-  good: maybe
+  good: false
   characters:
+    - grandpa
 - title: Kiss Kiss Bang Bangalore
   season: 17
   episode: 17
@@ -224,8 +225,9 @@ episodes:
     she decides to kick him out of the house and see other people.
   disneyplus_id: 7ebe927e-566b-41b5-9625-ba9600ceb5b5
   simpsonsworld_id: 277125187506
-  good: maybe
+  good: false
   characters:
+    - marge
 - title: The Monkey Suit
   season: 17
   episode: 21
@@ -233,8 +235,9 @@ episodes:
     be taught alongside evolution in public schools.
   disneyplus_id: 8d55f57f-97da-4a15-a0b2-57d6ce59bc29
   simpsonsworld_id: 277127235959
-  good: maybe
+  good: false
   characters:
+    - lisa
 - title: Marge and Homer Turn a Couple Play
   season: 17
   episode: 22
