--- a/episodes/season_31.yml
+++ b/episodes/season_31.yml
@@ -160,7 +160,7 @@ episodes:
   simpsonsworld_id:
   good: maybe
   characters:
-- title: HThe Hateful Eight-Year-Olds
+- title: The Hateful Eight-Year-Olds
   season: 30
   episode: 21
   description: Lisa is trapped at the sleepover from hell.
