--- a/episodes/season_31.yml
+++ b/episodes/season_31.yml
@@ -1,178 +1,178 @@
 ---
 episodes:
 - title: The Winter of Our Monetized Content
-  season: 30
+  season: 31
   episode: 1
   description: Homer and Bart become viral sensations.
-  disneyplus_id:
+  disneyplus_id: ca497a6c-9cac-4e92-91a4-af95a82d5680
   simpsonsworld_id:
   good: maybe
   characters:
 - title: Go Big or Go Homer
-  season: 30
+  season: 31
   episode: 2
   description: Homer becomes a mentor to an unstable intern who idolizes him.
-  disneyplus_id:
+  disneyplus_id: 523a90e8-f4fd-40c2-977a-9929b423319d
   simpsonsworld_id:
   good: maybe
   characters:
 - title: The Fat Blue Line
-  season: 30
+  season: 31
   episode: 3
   description: Fat Tony is framed, and Wiggum must exonerate him.
-  disneyplus_id:
+  disneyplus_id: 78b1bbea-6468-464c-a94f-5ef375db4c7b
   simpsonsworld_id:
   good: maybe
   characters:
 - title: Treehouse of Horror XXX
-  season: 30
+  season: 31
   episode: 4
   description: This 666th episode of the Simpsons parodies spooky favorites.
-  disneyplus_id:
+  disneyplus_id: bf3b47dd-1e1d-41b2-b11b-1b6d5434d23b
   simpsonsworld_id:
   good: maybe
   characters:
 - title: Gorillas on the Mast
-  season: 30
+  season: 31
   episode: 5
   description: Homer buys a boat, and Lisa frees a whale.
-  disneyplus_id:
+  disneyplus_id: 3915e644-5757-4bbe-a9f8-02bdadc080be
   simpsonsworld_id:
   good: maybe
   characters:
 - title: Marge the Lumberjill
-  season: 30
+  season: 31
   episode: 6
   description: Marge worries that her life is boring, so she takes up timbersports.
-  disneyplus_id:
+  disneyplus_id: 604833fa-ba0e-49cd-9f45-6704aaeee7da
   simpsonsworld_id:
   good: maybe
   characters:
 - title: "Livin' la Pura Vida"
-  season: 30
+  season: 31
   episode: 7
   description: On a dream Coasta Rican vacation, Homer is horrified to discover that Patty's new girlfriend is cool.
-  disneyplus_id:
+  disneyplus_id: 4109ff3d-6c74-41af-bfc9-5e7582b0dd40
   simpsonsworld_id:
   good: maybe
   characters:
 - title: Thanksgiving of Horror
-  season: 30
+  season: 31
   episode: 8
   description: Three tales of Thanksgiving terror.
-  disneyplus_id:
+  disneyplus_id: ea3e5e5a-ce1c-40c1-9c03-d3beae6800e6
   simpsonsworld_id:
   good: maybe
   characters:
 - title: Todd, Todd, Why Hast Thou Forsaken Me?
-  season: 30
+  season: 31
   episode: 9
   description: Todd loses his faith in God.
-  disneyplus_id:
+  disneyplus_id: dfc9fb50-95ca-4ccd-ab78-52f99bc63f94
   simpsonsworld_id:
   good: maybe
   characters:
 - title: Bobby, It's Cold Outside
-  season: 30
+  season: 31
   episode: 10
   description: Sideshow Bob returns, and Christmas is threatened.
-  disneyplus_id:
+  disneyplus_id: 887a8249-45d2-4648-bf8f-857068bc51ec
   simpsonsworld_id:
   good: maybe
   characters:
 - title: Hail to the Teeth
-  season: 30
+  season: 31
   episode: 11
   description: "Marge's old suitor, Artie Ziff, returns, and he's engaged."
-  disneyplus_id:
+  disneyplus_id: e790d895-efe3-4bc6-afa5-e638f558b453
   simpsonsworld_id:
   good: maybe
   characters:
 - title: The Miseducation of Lisa Simpson
-  season: 30
+  season: 31
   episode: 12
   description: When Springfield builds a S.T.E.M school, Lisa and Bart discover the terrifying jobs of the future.
-  disneyplus_id:
+  disneyplus_id: 26fa2ab1-13ec-4faa-934b-e153dbed8daa
   simpsonsworld_id:
   good: maybe
   characters:
 - title: Frinkcoin
-  season: 30
+  season: 31
   episode: 13
   description: Professor Frink develops a crypto currency that makes him rich.
-  disneyplus_id:
+  disneyplus_id: a4af5b0e-6078-484b-a3f9-0a70245947b7
   simpsonsworld_id:
   good: maybe
   characters:
 - title: Bart the Bad Guy
-  season: 30
+  season: 31
   episode: 14
   description: When Bart sees a superhero movie early, he blackmails the town not to spoil the ending.
-  disneyplus_id:
+  disneyplus_id: d8e4279f-206e-4aef-ae5b-b93349effcc0
   simpsonsworld_id:
   good: maybe
   characters:
 - title: Screenless
-  season: 30
+  season: 31
   episode: 15
   description: The family goes without electronic devices.
-  disneyplus_id:
+  disneyplus_id: 1416e154-0d9c-43db-b2c3-84359f77d64d
   simpsonsworld_id:
   good: maybe
   characters:
 - title: Better Off Ned
-  season: 30
+  season: 31
   episode: 16
   description: After a prank, Ned mentors Bart, and his life greatly improves.
-  disneyplus_id:
+  disneyplus_id: a65f610d-d2be-49fc-b6c7-c04e580af1a3
   simpsonsworld_id:
   good: maybe
   characters:
 - title: Highway to Well
-  season: 30
+  season: 31
   episode: 17
   description: Marge discovers she has a talent for healing when she works at a cannabis dispenary.
-  disneyplus_id:
+  disneyplus_id: 562d6a94-d1e1-4cca-8615-8dbbcbaf21d1
   simpsonsworld_id:
   good: maybe
   characters:
 - title: The Incredible Lightness of Being a Baby
-  season: 30
+  season: 31
   episode: 18
   description: Cletus becomes a helium tycoon.
-  disneyplus_id:
+  disneyplus_id: f91d19d8-aeeb-4ca8-bcac-6384591148ef
   simpsonsworld_id:
   good: maybe
   characters:
 - title: "Warrin' Priests"
-  season: 30
+  season: 31
   episode: 19
   description: Homer Pete Holmes guest stars as a mysterious new preacher.
-  disneyplus_id:
+  disneyplus_id: 7c6ef11c-f012-420a-95fe-27479b120221
   simpsonsworld_id:
   good: maybe
   characters:
 - title: "Warrin' Priests Part Two"
-  season: 30
+  season: 31
   episode: 20
   description: Reverend Lovejoy uncovers the truth about the popular, new preacher.
-  disneyplus_id:
+  disneyplus_id: bb8d939d-007c-4627-8922-74a6e5cd7ef1
   simpsonsworld_id:
   good: maybe
   characters:
 - title: The Hateful Eight-Year-Olds
-  season: 30
+  season: 31
   episode: 21
   description: Lisa is trapped at the sleepover from hell.
-  disneyplus_id:
+  disneyplus_id: e5cbcb10-6230-4647-9df9-db1fe728931c
   simpsonsworld_id:
   good: maybe
   characters:
 - title: The Way of the Dog
-  season: 30
+  season: 31
   episode: 22
   description: "The Simpsons explore the tragic past of Santa's Little Helper."
-  disneyplus_id:
+  disneyplus_id: 4e163c17-3990-4043-8439-e255f0702b0e
   simpsonsworld_id:
   good: maybe
   characters:
