--- a/episodes/season_31.yml
+++ b/episodes/season_31.yml
@@ -6,24 +6,29 @@ episodes:
   description: Homer and Bart become viral sensations.
   disneyplus_id: ca497a6c-9cac-4e92-91a4-af95a82d5680
   simpsonsworld_id:
-  good: maybe
+  good: false
   characters:
+    - homer
+    - bart
 - title: Go Big or Go Homer
   season: 31
   episode: 2
   description: Homer becomes a mentor to an unstable intern who idolizes him.
   disneyplus_id: 523a90e8-f4fd-40c2-977a-9929b423319d
   simpsonsworld_id:
-  good: maybe
+  good: false
   characters:
+    - homer
 - title: The Fat Blue Line
   season: 31
   episode: 3
   description: Fat Tony is framed, and Wiggum must exonerate him.
   disneyplus_id: 78b1bbea-6468-464c-a94f-5ef375db4c7b
   simpsonsworld_id:
-  good: maybe
+  good: false
   characters:
+    - fat_tony
+    - wiggum
 - title: Treehouse of Horror XXX
   season: 31
   episode: 4
@@ -32,6 +37,7 @@ episodes:
   simpsonsworld_id:
   good: maybe
   characters:
+    - treehouse_of_horror
 - title: Gorillas on the Mast
   season: 31
   episode: 5
