--- a/episodes/season_31.yml
+++ b/episodes/season_31.yml
@@ -35,7 +35,7 @@ episodes:
   description: This 666th episode of the Simpsons parodies spooky favorites.
   disneyplus_id: bf3b47dd-1e1d-41b2-b11b-1b6d5434d23b
   simpsonsworld_id:
-  good: maybe
+  good: false
   characters:
     - treehouse_of_horror
 - title: Gorillas on the Mast
@@ -44,8 +44,10 @@ episodes:
   description: Homer buys a boat, and Lisa frees a whale.
   disneyplus_id: 3915e644-5757-4bbe-a9f8-02bdadc080be
   simpsonsworld_id:
-  good: maybe
+  good: false
   characters:
+    - homer
+    - lisa
 - title: Marge the Lumberjill
   season: 31
   episode: 6
